# qbittorrent

./: Cargo.toml
src/: api.rs  data.rs  queries.rs  tests.rs
